# CS131-discussion

./: .gitignore  .gitlab-ci.yml  .swp  01-discussion.bib  01-discussion.tex  02-discussion.bib  02-discussion.tex  02-powerpoint.md  03-discussion.tex  04-discussion.bib  04-discussion.tex  05-discussion.bib  05-discussion.tex  06-discussion.bib  06-discussion.tex  07-discussion.bib  07-discussion.tex  08-discussion copy.tex  08-discussion.bib  08-discussion.tex  09-discussion.bib  09-discussion.synctex(busy)  09-discussion.tex  10-discussion.tex  11-discussion.bib  11-discussion.tex  12-discussion.bib  12-discussion.tex  13-discussion.tex  14-discussion.tex  15-discussion.tex  16-discussion.tex  AA6.md  Makefile  README.md  __latexindent_temp.tex  calc.lex  calc.y  calc2.y  heading.h  (+2 more)
.github/workflows/: c-cpp.yml  makefile.yml
08-prolog-sol/: prime.pl  rev.pl  types.pl
08-prolog-starter/: defn.pl  prime.pl  types.pl
discussion11-test-chalk/: Cargo.toml
discussion11-test-chalk/src/: main.rs
discussion11_test_trait/: .gitignore  CMakeCargo.cmake  CMakeLists.txt  Cargo.toml  CargoLink.cmake  CargoTest.cmake  FindRust.cmake  main.cpp
discussion11_test_trait/test_trait/: Cargo.toml
discussion11_test_trait/test_trait/src/: main.rs
discussion3-lambda_test/: CMakeLists.txt  README.md  main.cpp
discussion3-lambda_test/benchmark/: CMakeLists.txt
discussion6-cpp14-interpreter/: .gitignore  CMakeLists.txt  main.cpp
